--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,5 +1,5 @@
 <div>
   <% @students.each do |student| %>
-    <div><%= link_to student.first_name, students_path(student) + " " + link_to student.last_name, students_path(student) %></div>
+    <div><%= link_to student.first_name, student_path(student) + " " + link_to student.last_name, students_path(student) %></div>
   <% end %>
 </div>
